# retina-representation-interpretability

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: aptos_fallback.yaml  eyepacs_cropped_dinov2.yaml  eyepacs_resized_dinov2.yaml  eyepacs_resized_retfound.yaml  eyepacs_resized_timm.yaml  rf50k_category.yaml
data/: README.md
outputs/ablation/: eyepacs_cropped_dinov2_cropped_10k_resid_remove_sharpness_laterality_ablation_meta.json  eyepacs_cropped_dinov2_cropped_35k_ablation_meta.json  eyepacs_cropped_dinov2_cropped_35k_resid_remove_sharpness_laterality_ablation_meta.json  eyepacs_resized_dinov2_resized_10k_resid_remove_sharpness_laterality_ablation_meta.json  eyepacs_resized_dinov2_resized_2k_resid_remove_brightness_contrast_ablation_meta.json  eyepacs_resized_dinov2_resized_full_ablation_meta.json  eyepacs_resized_dinov2_resized_full_resid_remove_sharpness_laterality_ablation_meta.json
outputs/directions/: eyepacs_cropped_dinov2_cropped_10k_cosine_matrix.csv  eyepacs_cropped_dinov2_cropped_10k_direction_meta.json  eyepacs_cropped_dinov2_cropped_10k_direction_stability.csv  eyepacs_cropped_dinov2_cropped_10k_direction_summary.csv  eyepacs_cropped_dinov2_cropped_10k_directions.npz  eyepacs_cropped_dinov2_cropped_10k_projection_ratios.csv  (+54 more)
paper/: main.tex  references.bib
scripts/: 00_audit_dataset.py  01_compute_quality_features.py  02_extract_embeddings.py  03_compute_directions.py  04_run_probes.py  05_run_ablation.py  06_compare_preprocessing.py  07_make_figures.py  08_summarize_robustness.py  sync_hf_dataset.py
(+48 files in other folders)
